manifests/service.yaml
# kubectl expose
apiVersion: v1
kind: Service
metadata:
  labels:
    app: convalkontroller
  name: convalkontroller
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: convalkontroller
status:
  loadBalancer: {}
