manifests/val-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "depkon.akankshakumari393.dev"
webhooks:
- name: "depkon.akankshakumari393.dev"
  rules:
  - apiGroups:   ["akankshakumari393.dev"]
    apiVersions: ["v1alpha1"]
    operations:  ["CREATE", "UPDATE"]
    resources:   ["depkons"]
    scope:       "Namespaced"
  clientConfig:
    service:
      namespace: "default"
      name: "convalkon"
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZRekNDQXl1Z0F3SUJBZ0lVUEs5MlgvVlU4L3NpRlhBbTgyL3RDVGp5RU9rd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0lERWVNQndHQTFVRUF3d1ZZMjl1ZG1Gc2EyOXVMbVJsWm1GMWJIUXVjM1pqTUI0WERUSXlNRFV3TnpFeApNVE15TUZvWERUSXpNRFV3TnpFeE1UTXlNRm93SURFZU1Cd0dBMVVFQXd3VlkyOXVkbUZzYTI5dUxtUmxabUYxCmJIUXVjM1pqTUlJQ0lqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FnOEFNSUlDQ2dLQ0FnRUE0MGU4TmVjSmJoRy8KMlNYVVA5R05rcXNOSGJzL20vcVRMVVY5dU8zRmlmekRoRm8rYUFJRm1ZNmpWclZVZjk3TFRrODFvdFBWOFQxdwp4WXZuUUhoRWNyW [...]
  admissionReviewVersions: ["v1", "v1beta1"]
  sideEffects: None
  timeoutSeconds: 5
